force-app/main/default/objects/MemberPlan/fields/Service_Detail__c.field-meta.xml
<CustomField>
    <fullName>Service_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Detail</label>
    <referenceTo>Service_Detail__c</referenceTo>
    <relationshipLabel>Member Plans</relationshipLabel>
    <relationshipName>Member_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>